Does not work: <sqrt>, <power Of> and <custom input>. Basic functionality now works fine; script calculates strings that were created with interface. Fixed all of the noticed bugs and wrong behavior patterns. Program does not allow user to input chars that may let to creation of unevaluating string.

--- a/calculator.html
+++ b/calculator.html
@@ -45,8 +45,8 @@
                 <a id = "clear" href = "#">C</a>
                 <a id = "deleteSymb" href = "#">&larr;</a>
                 <a id = "powerOf" href = "#">&and;</a>
-                <a id = "openBrace" href = "#">(</a>
-                <a id = "closeBrace" href = "#">)</a>
+                <a id = "openBracket" href = "#">(</a>
+                <a id = "closeBracket" href = "#">)</a>
                 <a id = "equals" href = "#">=</a>
                 <a id = "dot" href = "#">.</a>
             </div>
